app/assets/stylesheets/global.css.scss
// Variables
// *********
$c-border: #ddd;
// General
// *******
html {
  height: 100%;
}
body {
  height: 100%;
  width: 100%;
  margin: 0;
  font-size: 12px;
  font-family: 'Raleway', sans-serif;
  display: flex;
  flex-direction: column;
}
h1, h2, h3, h4, p {
  padding: 10px 0;
  margin: 0;
}
a, a:hover {
  color: inherit;
}
img {
  vertical-align: top;
  border: none;
}
.clear {
  clear: both;
}
// Nav
// ***
#nav {
  min-height: 57px;
}
// Banner
// ******
.banner {
  width: 100%;
}
.banner-thumb {
  background-position: center;
  background-size: auto 100%;
  height: 100px;
}
// Bootstrap
// *********
.jumbotron {
  padding: 2rem;
  border: 1px solid #aaa;
  color: #212529;

  .row + .row {
    margin-top: .5rem;
  }
}
footer .btn-group {
  border: 1px solid #ccc;
  border-radius: 3px;
}
// Section
// *******
section {
  padding: 1rem 0;
}
// Container
// *********
#container {
  flex: 1;
  overflow-y: auto;
}
// Footer
// ******
footer {
  width: 100%;
  height: 60px;
  line-height: 60px;
  padding: 0 1rem;

  span:last-of-type {
    display: block;
  }

  @media (min-width: 768px) {
    span:last-of-type {
      float: right;
    }
  }
}
// Form
// ****
textarea {
  overflow-x: hidden;
}
// Blog post
// *********
.blog-post {
  padding-top: 10px;
  .title {
    font-size: 1.2em;
    padding-left: 90px;
    height: 50px;
    position: relative;
    border: 1px solid $c-border;
    border-left: 0;
    width: 60%;
    background: #eee;
    .date {
      position: absolute;
      top: 2px;
      left: 0;
      text-align: center;
      padding: 2px;
      width: 70px;
      height: 42px;
      border-right: 1px solid $c-border;
      .day {
        font-size: 1.3em;
      }
      .month {
        font-size: .6em;
      }
    }
    .text {
      line-height: 50px;
    }
  }
  .image {
    padding: 10px;
    text-align: center;
  }
  > .text {
    padding: 0 20px;
  }
}
.blog-post.alpha {
  border:0;
}
// Gallery
// *******
#gallery-wrapper {
  .gallery-empty {
    padding: 20px 25px;
  }
  .gallery-cats {
    text-align: center;
  }
  .gallery-thumbnail-wrapper {
    text-align: center;
    .gallery-thumbnail {
      width: 205px;
      padding: 15px;
      text-align: center;
      overflow: hidden;
      text-overflow: ellipsis;
      font-size: .9em;
      display: inline-block;
    }
  }
}

